<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="SegmentedControlCell" customModule="BeApp_Bicloo" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tF2-0S-InG">
                        <rect key="frame" x="8" y="8" width="304" height="54.5"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <segments>
                            <segment title="TOUTES"/>
                            <segment title="OUVERTES"/>
                            <segment title="FERMEES"/>
                        </segments>
                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </segmentedControl>
                </subviews>
                <constraints>
                    <constraint firstAttribute="trailing" secondItem="tF2-0S-InG" secondAttribute="trailing" constant="8" id="6h3-uK-FRu"/>
                    <constraint firstItem="tF2-0S-InG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Ttx-jE-7p8"/>
                    <constraint firstItem="tF2-0S-InG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Wjv-6w-hvY"/>
                    <constraint firstAttribute="bottom" secondItem="tF2-0S-InG" secondAttribute="bottom" constant="8" id="eSf-g8-L6m"/>
                </constraints>
            </tableViewCellContentView>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <connections>
                <outlet property="segmentControl" destination="tF2-0S-InG" id="s9d-tY-ZnG"/>
            </connections>
        </tableViewCell>
    </objects>
</document>
