...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Détail station-->
        <scene sceneID="ppd-hD-hUt">
            <objects>
                <viewController storyboardIdentifier="DetailView" title="Détail station" id="6p9-TW-Wnj" customClass="DetailViewController" customModule="BeApp_Bicloo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="PJR-Y6-hg3">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Station name " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0q5-55-1qE">
                                <rect key="frame" x="80" y="72.5" width="279" height="20.5"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oiU-rd-IVW">
                                <rect key="frame" x="110.5" y="339.5" width="154" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Localiser avec Plans"/>
                                <connections>
                                    <action selector="openMapForPlace" destination="6p9-TW-Wnj" eventType="touchUpInside" id="1gM-yg-B4A"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mark" translatesAutoresizingMaskIntoConstraints="NO" id="8us-GY-1Wd">
                                <rect key="frame" x="24" y="72.5" width="40" height="40"/>
...
