...
        bikeAvailable.text = String(format: "%02d" + " / " + "%02d", detailStation.available_bikes, detailStation.bike_stands)
        parkingAvailable.text = String(format: "%02d" + " / " + "%02d", detailStation.available_bike_stands, detailStation.bike_stands)
        bikeImage.setBackgroundColorWith(rangeValue: detailStation.available_bikes, rangeMax: detailStation.bike_stands)
        parkingImage.setBackgroundColorWith(rangeValue: detailStation.available_bike_stands, rangeMax: detailStation.bike_stands)
        if detailStation.banking {
            bankingImage.backgroundColor = UIColor.green
            bankingText.text = "Guichet disponible"
        } else {
            bankingImage.backgroundColor = UIColor.red
            bankingText.text = "Guichet indisponible"
        }
        updatedDate.text = detailStation.last_update
    }
...
