...
        setupTableView()
        getContent()
    }
    
    /// Configure and setup table view feature
    func setupTableView(){
        tableView.accessibilityIdentifier = "bikeStationTable"
        tableView.tableFooterView = UIView()
        tableView.register(UINib(nibName: "SegmentedControlCell", bundle: nil), forCellReuseIdentifier: "SegmentedControlCell")
        tableView.register(UINib(nibName: "BikeStationCell", bundle: nil), forCellReuseIdentifier: "BikeStationCell")
        // update data when user refresh table view
        self.refreshControl?.addTarget(self, action: #selector(refreshStationData(_:)), for: .valueChanged)
    }
...
